--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Dominique Miller Portfolio Site</title>
     <link rel="stylesheet" href="css/index.css"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-    <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery.bpopup.min.js" ></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/index.js"></script> -->
   </head>
   <body>
 
@@ -29,38 +32,34 @@
   </header>
 
   <div id="slide1">
-    <div class="content">
-      <h2>MERRY</h2>
-      <h1>CHRISTMAS</h1>
+    <div class="content container">
+      <h2>Dominique Miller</h2>
+      <h1>Full Stack Web Developer</h1>
       <div id="divider"> </div>
-      <h3>HAPPY NEW YEAR </h3>
-      <div id="ribbon"></div>
-      <div id="new_year"> </div>
+      <h3>Passionate, Creative, Fun, Energetic, Inquisitive, Problem Solving type of person..</h3>
     </div>
   </div>
 
   <div id="slide2">
-    <div class="content" >
+    <div class="row content" >
       <div class="quotes_container">
-        <div class="row ruby-projects">
-          <div class="container-fluid">
-            <hr class="featurette-divider">
-            <div class="col-md-3 col-sm-4 ">
-              <img class="img-circle" src="images/voter.jpg" alt="Generic placeholder image" width="170" height="170">
+        <div class="ruby-projects">
+          <div class="text-center">
+            <div class="col-md-3 col-sm-3 col-md-offset-3">
+              <img class="img-circle" src="images/voter.jpg" alt="Generic placeholder image" width="175" height="175">
               <h2>Voter Simulator</h2>
               <p><a class="btn btn-warning" href="https://github.com/apmiller108/voter_sim" role="button">GitHub &raquo;</a></p>
             </div>
-            <div class="col-md-3 col-sm-4 ">
-              <img class="img-circle" src="images/repl.png" alt="Generic placeholder image" width="170" height="170">
-              <h2>REPL</h2>
+            <div class="col-md-3 col-sm-3">
+              <img class="img-circle" src="images/repl.png" alt="Generic placeholder image" width="175" height="175">
+              <h2>Adventure Game</h2>
               <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/repl_game" role="button">GitHub &raquo;</a></p>
             </div>
-            <div class="col-md-3 col-sm-4 ">
-              <img class="img-circle" src="images/contact3.jpg" alt="Generic placeholder image" width="170" height="170">
+            <div class="col-md-3 col-sm-3">
+              <img class="img-circle" src="images/contact3.jpg" alt="Generic placeholder image" width="175" height="175">
               <h2>Contact Manager</h2>
               <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/contact_manager" role="button">GitHub &raquo;</a></p>
             </div>
-            <hr class="featurette-divider">
           </div>
         </div>
       </div>
@@ -71,35 +70,30 @@
     <div class="content">
       <div class="quotes_container">
         <h3 class="quotes">Passionate, creative, full of energy! </h3>
-        <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Norman Vincent Peale </h4>
       </div>
     </div>
   </div>
 
   <div id="slide4">
-    <div class="content">
+    <div class="row content">
       <div class="quotes_container">
-        <div class="row rails-projects">
-          <div class="container-fluid">
-            <hr class="featurette-divider">
-              <div class="col-md-3 col-sm-4 ">
-                <p><img class="featurette-image img-responsive center-block" src="images/piktrail.png" alt="Generic placeholder image" width="185" height="185"></p>
-                <h2>PikTrail</h2>
-                <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/flaggler_walk-" role="button">GitHub &raquo;</a></p>
-              </div>
-              <div class="col-md-3 col-sm-4 ">
-                <p><img class="featurette-image img-responsive center-block" src="images/logo.gif" alt="Generic placeholder image" width="170" height="170"></p>
-                <h2>Chemo Connections</h2>
-                <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/chemo_connections" role="button">GitHub &raquo;</a></p>
-              </div>
-              <div class="col-md-3 col-sm-4 ">
-                <p></p>
-                <img class="featurette-image img-responsive center-block" src="images/hidenseek.jpg" alt="Generic placeholder image" width="175" height="175">
-                <h2>LoadnSeek</h2>
-                <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/loadnseek" role="button">GitHub &raquo;</a></p>
-              </div>
-              <hr class="featurette-divider">
-          </div>
+        <div class="rails-projects">
+            <div class="col-md-3 col-sm-4 col-xs-4 col-md-offset-3">
+              <p><img class="featurette-image img-responsive center-block" src="images/piktrail.png" alt="Generic placeholder image" width="175" height="175"></p>
+              <h2>PikTrail</h2>
+              <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/flaggler_walk-" role="button">GitHub &raquo;</a></p>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-4">
+              <p><img class="featurette-image img-responsive center-block" src="images/logo.gif" alt="Generic placeholder image" width="175" height="175"></p>
+              <h2>Chemo Connections</h2>
+              <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/chemo_connections" role="button">GitHub &raquo;</a></p>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-4">
+              <p></p>
+              <img class="featurette-image img-responsive center-block" src="images/hidenseek.jpg" alt="Generic placeholder image" width="175" height="175">
+              <h2>LoadnSeek</h2>
+              <p><a class="btn btn-warning" href="https://github.com/dominiquemiller/loadnseek" role="button">GitHub &raquo;</a></p>
+            </div>
         </div>
       </div>
     </div>
@@ -109,7 +103,7 @@
     <div class="content">
       <div class="quotes_container">
         <h3 class="quotes">Lets build something incredible!</h3>
-        <div class="qoutes_container">
+        <div class="qoutes_container text-center">
           <i class="fa fa-linkedin fa-4x"></i>
           <i class="fa fa-github-square fa-4x"></i>
           <i class="fa fa-envelope fa-4x"></i>
@@ -117,7 +111,6 @@
       </div>
     </div>
   </div>
-
 
   </body>
 </html>
